exept option evrth in menu is fixed